--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "private": true,
+  "eslintConfig": {
+    "extends": "hrundel/node"
+  },
   "scripts": {
+    "lint": "eslint .",
     "test": "mocha test"
   },
-  "private": true,
   "dependencies": {
+    "eslint": "3.7.0",
+    "eslint-config-hrundel": "1.0.0",
     "mocha": "3.0.2"
   }
 }
