--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha test"
+    "test": "eslint . && mocha test"
   },
   "dependencies": {
     "eslint": "3.7.0",
-    "eslint-config-hrundel": "1.0.0",
-    "mocha": "3.0.2"
+    "eslint-config-hrundel": "1.1.1",
+    "mocha": "3.1.0"
   }
 }
