Не фиксируем версию пресета для eslint

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "eslint": "3.7.0",
-    "eslint-config-hrundel": "1.1.1",
+    "eslint-config-hrundel": "latest",
     "mocha": "3.1.0"
   }
 }
