Используем babel-eslint

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "eslint . && mocha test"
   },
   "dependencies": {
+    "babel-eslint": "8.0.0",
     "eslint": "3.7.0",
     "eslint-config-hrundel": "latest",
     "mocha": "3.1.0"
